RESOLVED FIXED126534
[WinCairo] Compile error, INTMAX_MAX is not defined.
https://bugs.webkit.org/show_bug.cgi?id=126534
Summary [WinCairo] Compile error, INTMAX_MAX is not defined.
peavo
Reported 2014-01-06 12:05:35 PST
While compiling WebKit, I get the following compile error: C:\Program Files (x86)\Microsoft Visual Studio 12.0\VC\include\ratio(122): error C2065: 'INTMAX_MAX' : undeclared identifier (..\..\win\WebBackForwardList.cpp) INTMAX_MAX is defined in stdint.h, but only if __STDC_LIMIT_MACROS is defined. We need to define it. A similar fix was done in r161149.
Attachments
Patch (1.20 KB, patch)
2014-01-06 12:12 PST, peavo
no flags
peavo
Comment 1 2014-01-06 12:12:43 PST
Brent Fulgham
Comment 2 2014-01-08 10:48:04 PST
Comment on attachment 220446 [details] Patch r=me
WebKit Commit Bot
Comment 3 2014-01-08 11:16:18 PST
Comment on attachment 220446 [details] Patch Clearing flags on attachment: 220446 Committed r161513: <http://trac.webkit.org/changeset/161513>
WebKit Commit Bot
Comment 4 2014-01-08 11:16:20 PST
All reviewed patches have been landed. Closing bug.
peavo
Comment 5 2014-01-08 11:32:28 PST
(In reply to comment #2) > (From update of attachment 220446 [details]) > r=me Thanks :)
Note You need to log in before you can comment on or make changes to this bug.