[WinCairo] Compile error. https://bugs.webkit.org/show_bug.cgi?id=126534

Patch by peavo@outlook.com <peavo@outlook.com> on 2014-01-08
Reviewed by Brent Fulgham.

* WebKitPrefix.h: Define __STDC_LIMIT_MACROS, so INTMAX_MAX will be defined (needed by std C++ library).

Canonical link: https://commits.webkit.org/144542@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@161513 268f45cc-cd09-0410-ab3c-d52691b4dbfc