Source/WebKit/win/WebKitPrefix.h
@@ -38,5 +38,10 @@
 #define _WINSOCKAPI_ // Prevent inclusion of winsock.h in windows.h
 #endif
 
+// Needed for limit defines, like INTMAX_MAX, which is used by the std C++ library
+#ifndef __STDC_LIMIT_MACROS
+#define __STDC_LIMIT_MACROS
+#endif
+
 #include <CoreFoundation/CoreFoundation.h>
 #include <WebKit/WebKit.h>
